service.yaml
apiVersion: v1
kind: Service
metadata:
  name: into-guesty-flower-service
  namespace: NAMESPACE
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/backend-config: '{"default": "flower-backendconfig"}'
spec:
  type: NodePort
  selector:
    app: into-guesty-flower
  ports:
  - protocol: TCP
    port: 80
    targetPort: 30005
    nodePort: NODE_PORT
